# analise_crimes_fortaleza

./: .gitignore  Analise_Inicial_CVLI_2009_a_2024.ipynb  Análise_Inicial_CVLI_2009_a_2024.ipynb  Series_Temporais_Interativas_CVLIs_2009_a_2024.ipynb  Series_temporais_CVLI_2009_a_2024.ipynb  pyproject.toml  requirements.txt  serie_temporal_cada_ais.ipynb
mapas/: crimes_por_ais.html  mapa_base_interativo.html  população_por_ais.html  população_por_bairros.html  taxa_crimes_por_populacao.html
source_data/: bairros_por_ais.json  crimes_por_ais.json  densidade_populacional_2022.json  populacao_2022.json
